--- a/.gitmodules
+++ b/.gitmodules
@@ -12,4 +12,4 @@
 	url = git://github.com/wincent/Command-T.git
 [submodule "vim/bundle/vim-less"]
 	path = vim/bundle/vim-less
-	url = git://github.com/KohPoll/vim-less.git
+	url = git://github.com/groenewege/vim-less.git
